# Fid-Import

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  DOCKER.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  MANIFEST.in  MIGRATION_GUIDE.md  PYPI_PUBLISHING.md  QUICK_SETUP.md  README.md  README_V2.md  TESTING_REPORT.md  docker-compose.yml  enrich-data.py  fid-import.py  fidelity_portfolio.db.backup_20260101_110519  fix_etf_sectors.py  import_fidelity_csv.py  index.html  pyproject.toml  pytest.ini  requirements.txt  setup.py  view_cache_stats.py
.github/workflows/: ci.yml
config/: config.yaml.example
dashboard/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
dashboard/app/: layout.tsx  page.tsx  providers.tsx
dashboard/app/analytics/: page.tsx
dashboard/app/holdings/: page.tsx
dashboard/app/import-status/: page.tsx
dashboard/app/insights/: page.tsx
dashboard/app/optimize/: page.tsx
dashboard/app/performance/: page.tsx
dashboard/app/risk/: page.tsx
dashboard/app/settings/: page.tsx
dashboard/app/transactions/: page.tsx
dashboard/components/performance/: PortfolioTimeline.tsx
dashboard/components/shared/: MetricCard.tsx  Navigation.tsx  PeriodSelector.tsx  ThemeToggle.tsx
dashboard/components/transactions/: CSVImporter.tsx  TransactionForm.tsx  TransactionTable.tsx
dashboard/components/visualizations/: CorrelationHeatmap.tsx  InteractivePerformanceChart.tsx  PortfolioTreemap.tsx  SectorPieChart.tsx
dashboard/contexts/: ThemeContext.tsx
dashboard/hooks/: useOptimize.ts  usePerformance.ts  usePortfolio.ts  useRisk.ts  useSync.ts  useTransactions.ts
dashboard/lib/: api-client.ts  formatters.ts
dashboard/types/: index.ts
docs/: AUTO_START_SETUP.md  CACHE_MANAGEMENT.md  FIDELITY_CSV_IMPORT.md  RELEASE_NOTES_v3.0.md
fidelity_tracker/: __init__.py
fidelity_tracker/analytics/: __init__.py  attribution.py  optimization.py  performance.py  risk.py
fidelity_tracker/api/: __init__.py  server.py
fidelity_tracker/benchmarks/: __init__.py  fetcher.py
fidelity_tracker/cli/: commands.py
fidelity_tracker/core/: collector.py  database.py  enricher.py  storage.py
fidelity_tracker/database/: __init__.py  manager.py  migrations.py
fidelity_tracker/scheduler/: scheduler.py
fidelity_tracker/transactions/: __init__.py  cost_basis.py  csv_importer.py  manager.py  snapshot_inference.py
fidelity_tracker/utils/: config.py  logger.py
loveable-integration/: ARCHITECTURE.md  GITHUB_STORAGE.md  README.md  SETUP_INSTRUCTIONS.md  package.json.template  quickstart.sh
loveable-integration/components/: HoldingsTable.tsx  PortfolioChart.tsx  PortfolioSummary.tsx  SectorAllocation.tsx
loveable-integration/hooks/: usePortfolio.ts
loveable-integration/pages/: Dashboard.tsx
loveable-integration/services/: portfolioDataSource.ts  portfolioService.ts  portfolioServiceEnhanced.ts
rothconversion optimizzer/: index.html
scripts/: export_for_loveable.sh  sync_and_export.sh
tests/: __init__.py  conftest.py  test_config.py  test_database.py  test_enricher.py  test_integration.py  test_storage.py
web/: app.py
