[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fidelity-portfolio-tracker"
version = "2.0.0"
description = "Automated Fidelity portfolio data collection and analysis tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["fidelity", "portfolio", "investment", "tracking", "finance", "stocks"]
authors = [
    {name = "Randy Lust", email = "rlust@example.com"}
]
maintainers = [
    {name = "Randy Lust", email = "rlust@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Operating System :: OS Independent",
]

dependencies = [
    "fidelity-api>=0.0.16",
    "python-dotenv>=1.0.1",
    "yfinance>=0.2.52",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "keyring>=24.3.0",
    "loguru>=0.7.2",
    "apscheduler>=3.10.4",
    "streamlit>=1.29.0",
    "plotly>=5.18.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.5",
    "safety>=2.3.5",
]
docker = [
    "docker>=6.1.3",
    "docker-compose>=1.29.2",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
]

[project.urls]
Homepage = "https://github.com/rlust/Fid-Import"
Documentation = "https://github.com/rlust/Fid-Import/blob/main/README_V2.md"
Repository = "https://github.com/rlust/Fid-Import"
Issues = "https://github.com/rlust/Fid-Import/issues"
Changelog = "https://github.com/rlust/Fid-Import/blob/main/CHANGELOG.md"

[project.scripts]
portfolio-tracker = "fidelity_tracker.cli.commands:cli"

[tool.setuptools]
packages = ["fidelity_tracker", "fidelity_tracker.core", "fidelity_tracker.utils", "fidelity_tracker.cli", "fidelity_tracker.scheduler", "fidelity_tracker.api"]

[tool.setuptools.package-data]
fidelity_tracker = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short --cov=fidelity_tracker --cov-report=term-missing"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests with mocked external services",
    "slow: Tests that take longer to run",
    "requires_credentials: Tests that require Fidelity credentials",
]

[tool.coverage.run]
source = ["fidelity_tracker"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]
